ecmascript/parser/tests/test262-error-references/fail/363ecb9e2e556694.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/363ecb9e2e556694.js:1:11
  |
1 | new f(... ... g);
  |           ^^^

